同步适配新 DB Schema：重命名字段、替换废弃表引用
【medical-order-service Java】
MedicalOrder 领域对象：
- projectCode/projectName → itemCode/itemName
- executorId/executorName/executionLocation/equipmentId → roomId/roomName/roomLocation
- triageCreatedByType → triageSource；移除 resultData
- executingStaffId 替代 executingDoctorId/executingDoctorName

MedicalOrderRepository：
- 所有 SQL 从 medical_workspace/medical_technician/medical_workspace_project
  迁移到 examination_room/staff_room_assignment/room_item_capability
- find/findById 加 LEFT JOIN examination_room 获取 roomName/roomLocation
- executorCandidates() → roomCandidates()，按 item_code 匹配
- technician() → staffRoom()，查 staff_room_assignment
- assign/start/complete/moveToTail 使用 room_id 列

AiTriageClient：
- ExecutorCandidate → RoomCandidate，itemNames 替代 specialties
- TriageResult 精简为 (roomId, source, reasons)

MedicalOrderService：
- 对应方法签名更新，complete() 移除 resultData 参数

MedicalOrderController：
- CreateRequest: projectCode→itemCode, projectName→itemName
- CompleteRequest: 移除 resultData

【appointment-service Java】
DevQueueSeeder 完全重写：
- 不再按 ID 前缀匹配，改为按 doctor_id + queue_number 范围刷新
- 张医生工号 00010001，神经内科队列 100-114 / CT队列 200-214
- 同步更新 doctor.schedule.work_date（跨 schema）

【doctor-service】
BaseCatalogController：medical_item_catalog → medical_item
V3 迁移：补充 registration_level / settlement_category 表

【前端 / 小程序】
MedicalOrder 接口字段全量对齐新字段名：
- itemCode/itemName、roomId/roomName/roomLocation
- 移除 projectCode/projectName/executorId/executorName/executionLocation/equipmentId
CashierWorkbench/DoctorWorkbench/MedicalTechWorkbench/患者小程序均同步更新

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>